# coralogix-management-sdk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README  README.md  SECURITY.md  apidocs.swagger.json  buf.yaml  dev-setup.sh  go.mod  go.sum  install_hooks.sh  openapi-generator.yaml  openapi.yaml  proto-toolchain-versions.txt  protofetch.toml  pull_protos.sh  release-plz.toml  script.sh
.github/: CODEOWNERS  dependabot.yml
cx-api/: Cargo.toml  build.rs  protofetch.toml
cx-api/proto/com/coralogix/alerts/v1/: alert_notifications.proto
cx-api/proto/com/coralogix/alerts/v2/: alert_condition.proto
cx-api/proto/com/coralogix/dashboards/v1/application/: user_settings_service.proto
cx-api/proto/com/coralogix/dashboards/v1/common/: time_frame.proto
cx-api/proto/com/coralogix/dashboards/v1/widgets/: alerts_service.proto  anomalies_service.proto  platform_overview_service.proto  top_errored_ratio_service.proto  top_errors_service.proto
cx-api/proto/com/coralogix/dataprime/ast/v1/: expression.proto
cx-api/proto/com/coralogix/dataprime/v1/: archive_log.proto  compile.proto  metrics.proto  query_service.proto
cx-api/proto/com/coralogix/datausage/v1/: audit_log.proto
cx-api/proto/com/coralogix/dpxl/v1/: dpxl.proto
cx-api/proto/com/coralogix/enrichment/v1/: audit_log.proto  custom_enrichment_service.proto  enrichment_type.proto
cx-api/proto/com/coralogix/extensions/v1/: extension.proto
cx-api/proto/com/coralogix/integrations/v1/: integration.proto  integration_service.proto  push_based_platform.proto  pushbased_contextual_data_integration_service.proto
cx-api/proto/com/coralogix/openapi/v1/: annotations.proto
cx-api/proto/com/coralogix/outgoing_webhooks/v1/: audit_log.proto  outgoing_webhook_service.proto
cx-api/proto/com/coralogix/quota/v1/: bulk_create_policy_response.proto  create_policy_response.proto  policy_order.proto  reorder_policies_response.proto
cx-api/proto/com/coralogix/scopes/v1/: scopes.proto
cx-api/proto/com/coralogix/tags/v1/: tag_service.proto
cx-api/proto/com/coralogixapis/dashboards/v1/ast/: annotation.proto  filter.proto  layout.proto
cx-api/proto/com/coralogixapis/dataprime/v1/: request.proto
cx-api/proto/com/coralogixapis/incidents/v1/: scoping_details.proto
cx-api/proto/com/coralogixapis/views/v1/: audit_log.proto
cx-api/src/: lib.rs
rust/: Cargo.toml  Dockerfile  LICENSE  README.md  release-plz.toml  rustfmt.toml
rust/cx-api/: CHANGELOG.md  Cargo.toml  build.rs
rust/cx-api/src/: lib.rs
rust/cx-sdk/: CHANGELOG.md  Cargo.toml  build.rs
rust/cx-sdk/src/: auth.rs  client.rs  connection.rs  error.rs  lib.rs  metadata.rs  util.rs
rust/cx-sdk/src/client/: actions.rs  ai_center.rs  alerts.rs  alerts_scheduler.rs  apikeys.rs  archive_logs.rs  archive_metrics.rs  archive_retentions.rs  contextual_data_integrations.rs  dashboard_folders.rs  dashboards.rs  data_usage.rs  dataprime_query.rs  datasets.rs  enrichments.rs  events.rs  events2metrics.rs  extensions.rs  groups.rs  incidents.rs  integration.rs  integrations.rs  ip_access.rs  notifications.rs  recording_rule_group_sets.rs  saml.rs  scopes.rs  slis.rs  slos.rs  tco_policies.rs  teams.rs  users.rs  views.rs  views_folders.rs  webhooks.rs
rust/examples/: Cargo.toml  Dockerfile
rust/examples/aaa/: Cargo.toml
rust/examples/aaa/src/: lib.rs
rust/examples/actions/: Cargo.toml
rust/examples/actions/src/: lib.rs  main.rs
rust/examples/alert-scheduler/: Cargo.toml
rust/examples/alert-scheduler/src/: lib.rs
rust/examples/alerts/: Cargo.toml
rust/examples/alerts/src/: lib.rs  main.rs
rust/examples/api-keys/: Cargo.toml
rust/examples/api-keys/src/: lib.rs
rust/examples/api_keys/: Cargo.toml
rust/examples/api_keys/src/: lib.rs
rust/examples/archive-logs/: Cargo.toml
rust/examples/archive-logs/src/: lib.rs
rust/examples/archive-metrics/: Cargo.toml
rust/examples/archive-metrics/src/: lib.rs
rust/examples/custom-enrichments/: Cargo.toml
rust/examples/custom-enrichments/src/: lib.rs  main.rs
rust/examples/dashboard-folders/: Cargo.toml
rust/examples/dashboard-folders/src/: lib.rs
rust/examples/dashboards/: Cargo.toml  dashboard.json  dashboard_test.json
rust/examples/dashboards/src/: lib.rs  main.rs
rust/examples/data-exploration/: Cargo.toml
rust/examples/data-exploration/src/: lib.rs
rust/examples/data-sets/: Cargo.toml
rust/examples/data-sets/src/: lib.rs
rust/examples/dataplans/: Cargo.toml
rust/examples/dataplans/src/: lib.rs
rust/examples/dataprime/: Cargo.toml
rust/examples/dataprime-query/: Cargo.toml
rust/examples/dataprime-query/src/: lib.rs  main.rs
rust/examples/dataprime/src/: lib.rs
rust/examples/enrichments/: Cargo.toml
rust/examples/enrichments/src/: lib.rs
rust/examples/events/: Cargo.toml
rust/examples/events/src/: lib.rs
rust/examples/extensions/: Cargo.toml
rust/examples/extensions/src/: lib.rs
rust/examples/groups/: Cargo.toml
rust/examples/groups/src/: lib.rs
rust/examples/incidents/: Cargo.toml
rust/examples/incidents/src/: lib.rs
rust/examples/infra-monitoring/: Cargo.toml  README.md
rust/examples/infra-monitoring/src/: lib.rs
rust/examples/integrations/: Cargo.toml
rust/examples/integrations/src/: lib.rs
rust/examples/logs/: Cargo.toml
rust/examples/logs/src/: lib.rs
rust/examples/metrics/: Cargo.toml
rust/examples/metrics/src/: lib.rs
rust/examples/notifications/: Cargo.toml
rust/examples/notifications/src/: lib.rs
rust/examples/outgoing-webhooks/: Cargo.toml  dashboard.json
rust/examples/outgoing-webhooks/src/: lib.rs
rust/examples/recording-rule-group-sets/: Cargo.toml
rust/examples/recording-rule-group-sets/src/: lib.rs
rust/examples/recording-rules/: Cargo.toml
rust/examples/recording-rules/src/: lib.rs
rust/examples/scopes/: Cargo.toml
rust/examples/scopes/src/: lib.rs
rust/examples/slos/: Cargo.toml
rust/examples/slos/src/: lib.rs
rust/examples/teams/: Cargo.toml
rust/examples/teams/src/: lib.rs
rust/examples/users/: Cargo.toml
rust/examples/users/src/: lib.rs
tools/release-management/: Cargo.toml
(+5944 files in other folders)
