[workspace]
members = ["cx-api", "cx-sdk"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/coralogix/rust-mgmt-sdk"
keywords = ["asynchronous", "coralogix", "log", "management", "sdk"]
categories = ["asynchronous", "log"]
authors = []

[workspace.dependencies]
protofetch = "0.1.2"
