[package]
name = "cx-api"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
futures = "0.3"
once_cell = "1.17"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
], optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
time = { version = "0.3", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
], optional = true }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = [
    "gzip",
    "prost",
    "tls",
    "tls-roots",
] }
tracing = { version = "0.1.37", features = ["default", "log"] }
url = { version = "2.3", optional = true }
prost = "0.12.3"
prost-types = "0.12.3"

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
protofetch = { workspace = true }
is_ci = "1.2.0"
