[workspace]
members = ["cx-api", "cx-sdk"]
exclude = [
    "examples/custom-enrichments",
    "examples/dashboards",
    "examples/dataprime-query",
    "examples/alerts",
    "examples/actions",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/coralogix/coralogix-management-sdk"
keywords = ["asynchronous", "coralogix", "log", "management", "sdk"]
categories = ["asynchronous", "log"]
authors = []

[workspace.dependencies]
protofetch = "0.1.4"
backoff = { version = "0.4", features = ["tokio"] }
thiserror = "1"
tokio = { version = "1", default-features = false }
tokio-stream = "0.1.14"
tokio-util = "0.7"
log = "*"
http = "0.2"
humantime-serde = "*"
prost = "*"
prost-types = "*"
tonic = { version = "0.11", features = ["gzip", "prost", "tls", "tls-roots"] }
url = { version = "2.3" }
tracing = { version = "0.1", features = ["default", "log"] }
time = { version = "0.3", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
serde = { version = "1", features = ["derive"] }
bytes = "*"
