[workspace]
members = ["cx-api", "cx-sdk"]
exclude = [
    "examples/actions",
    "examples/alerts",
    "examples/custom-enrichments",
    "examples/dashboards",
    "examples/dataprime-query",
]
resolver = "2"


[workspace.package]
version = "0.12.0"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/coralogix/coralogix-management-sdk"
keywords = ["api-bindings", "coralogix", "log", "management", "sdk"]
categories = ["api-bindings", "development-tools::debugging", "config"]
authors = ["The YAK team at Coralogix"]
readme = "README.md"
homepage = "https://coralogix.com"

[workspace.dependencies]
protofetch = "0.1.4"
backoff = { version = "0.4", features = ["tokio"] }
thiserror = "2"
tokio = { version = "1", default-features = false }
tokio-stream = "0.1.14"
tokio-util = "0.7"
log = "0.4"
http = "1"
humantime-serde = "1"
prost = "0.13"
prost-types = "0.13"
prost-wkt = "0.6"
prost-wkt-types = "0.6"
tonic = { version = "0.12", features = ["gzip", "prost", "tls", "tls-roots"] }
url = { version = "2.5" }
tracing = { version = "0.1", features = ["default", "log"] }
time = { version = "0.3", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bytes = "1.6"
reqwest = { version = "0.12", features = ["json"] }
cx-api = { version = "0.12.0", path = "cx-api" }
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
