[package]
name = "cx-api"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }

[features]
default = [
    "alerts",
    "dashboards",
    "data_usage",
    "dataprime",
    "enrichment",
    "extensions",
    "incidents",
    "outgoing_webhooks",
    "quota",
    "rules",
    "scopes",
    "tags",
    "views",
]
alerts = []
rules = []
outgoing_webhooks = []
quota = []
enrichment = []
data_usage = []
dashboards = []
tags = []
extensions = []
dataprime = []
incidents = []
views = []
scopes = []

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
prost-wkt = "0.5"
prost-wkt-types = "0.5"

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
prost-wkt-build = "0.5"
