[package]
name = "cx-api"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }

[features]
default = [
    "alerts",
    "dashboards",
    "data_usage",
    "dataprime",
    "enrichment",
    "extensions",
    "outgoing_webhooks",
    "quota",
    "rules",
    "tags",
    "views",
    "actions",
    "alert_scheduler",
    "api_keys",
    "target",
    "metrics_configurator",
    "retentions",
    "team",
    "sli",
    "slos",
    "e2m",
]
alerts = []
rules = []
outgoing_webhooks = []
quota = []
enrichment = []
data_usage = []
dashboards = []
tags = []
extensions = []
dataprime = []
views = []
actions = []
alert_scheduler = []
api_keys = []
target = []
metrics_configurator = []
retentions = []
team = []
sli = []
slos = []
e2m = []

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
prost-wkt = "0.5"
prost-wkt-types = "0.5"
serde = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
prost-wkt-build = "0.5"
tonic-build = { version = "0.11", features = ["prost"] }
