[package]
name = "cx-api"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }
description = "Coralogix Management API Proxies. Support package for cx-sdk"
readme = "../README.md"
exclude = ["build.rs"]
include = ["src/**/*"]

[lib]
doctest = false

[features]
default = [
    "actions",
    "alert_scheduler",
    "alerts",
    "api_keys",
    "dashboards",
    "data_usage",
    "e2m",
    "enrichment",
    "extensions",
    "groups",
    "integrations",
    "metrics_configurator",
    "outgoing_webhooks",
    "quota",
    "retentions",
    "rules",
    "scopes",
    "slos",
    "tags",
    "target",
    "team",
    "views",
    "recording_rule_groups",
    "saml_configuration",
    "notifications",
    "contextual_data_integrations",
    "incidents",
]
alerts = []
rules = []
outgoing_webhooks = []
quota = []
enrichment = []
data_usage = []
dashboards = []
tags = []
extensions = []
views = []
actions = []
alert_scheduler = []
api_keys = []
target = []
metrics_configurator = []
retentions = []
team = []
scopes = []
slos = []
e2m = []
groups = []
integrations = []
recording_rule_groups = []
saml_configuration = []
notifications = []
contextual_data_integrations = []
incidents = []

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
prost-wkt = { workspace = true }
prost-wkt-types = { workspace = true }

serde = { workspace = true }
tonic = { workspace = true }

[lints.clippy]
large_enum_variant = "allow"

[build-dependencies]
prost-wkt-build = "0.6"
tonic-build = { version = "0.12", features = ["prost"] }
