[package]
name = "cx-sdk"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }

[dependencies]
backoff = { workspace = true }
bytes = { workspace = true }
cx-api = { path = "../cx-api" }
http = { workspace = true }
humantime-serde = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true, features = ["gzip", "prost", "tls", "tls-roots"] }
tracing = { workspace = true }
url ={ workspace = true }