[package]
name = "cx-sdk"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }
description = "Coralogix Management SDK"

[dependencies]
backoff = { workspace = true }
bytes = { workspace = true }
cx-api = { workspace = true }
http = { workspace = true }
humantime-serde = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true, features = ["gzip", "prost", "tls", "tls-roots"] }
tracing = { workspace = true }
url = { workspace = true }

[lints.rust]
missing_docs = "deny"

[lints.clippy]
all = "deny"
print_stdout = "deny"
