[workspace]
resolver = "2"
members = [
    "aaa",
    "actions",
    "alerts",
    "dashboard-folders",
    "dashboards",
    "data-exploration",
    "dataplans",
    "enrichments",
    "events",
    "incidents",
    "infra-monitoring",
    "integrations",
    "logs",
    "metrics",
    "recording-rules",
]
