[package]
name = "release-management"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "create_release_branch"
path = "src/bin/create_release_branch.rs"

[[bin]]
name = "cleanup"
path = "src/bin/cleanup.rs"

[dependencies]
octocrab = "0.42"
serde = { version = "1", features = ["derive"] }
toml_edit = "0.22"
protofetch = "0"
tokio = { version = "1", features = ["full"] }
eyre = "0"
git_cmd = "0.6"
time = { version = "0.3.36", features = ["formatting"] }
clap = "4.5"
tracing = "*"
tracing-subscriber = { features = ["env-filter"], version = "*" }
lazy_static = "1.5.0"
cx-sdk = "*"
