[package]
name = "alert-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "*", features = ["full"] }
cx-sdk = { path = "../../cx-sdk" }
tonic = "*"
anyhow = "*"
serde_json = "*"
time = "0.3.36"
