[package]
name = "alerts"
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/coralogix/rust-mgmt-sdk"
keywords = ["asynchronous", "coralogix", "log", "management", "sdk"]
categories = ["asynchronous", "log"]
authors = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "*", features = ["full"] }
http = "*"
cx-sdk = { path = "../../cx-sdk" }
async-trait = "*"
tonic = "*"
anyhow = "*"
uuid = { version = "*", features = ["v4", "serde"] }
serde_json = "*"
time = "0.3.36"
prost = "0.12"
prost-wkt = "0.5"
prost-wkt-types = "0.5"
