[package]
name = "api_keys"
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/coralogix/coralogix-management-sdk"
keywords = ["asynchronous", "coralogix", "log", "management", "sdk"]
categories = ["asynchronous", "log"]
authors = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
cx-sdk = { path = "../../cx-sdk" }
serde_json = "*"
time = "0.3.36"

tokio = { version = "*", features = ["full"] }
tonic = "*"
