[package]
name = "enrichments"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/coralogix/coralogix-management-sdk"
keywords = ["asynchronous", "coralogix", "log", "management", "sdk"]
categories = ["asynchronous", "log"]
authors = []

[dependencies]
anyhow = "*"
cx-sdk = { path = "../../cx-sdk" }
tokio = { version = "*", features = ["full"] }
