[package]
name = "infra-monitoring"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
cx-sdk = { path = "../../cx-sdk" }
serde_json = "*"
time = "0.3.36"

tokio = { version = "*", features = ["full"] }
tonic = "*"
