[package]
name = "outgoing-webhooks"
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/coralogix/coralogix-management-sdk"
keywords = ["asynchronous", "coralogix", "log", "management", "sdk"]
categories = ["asynchronous", "log"]
authors = []


[dependencies]
tokio = { version = "*", features = ["full"] }
http = "*"
cx-sdk = { path = "../../cx-sdk" }
async-trait = "*"
tonic = "*"
anyhow = "*"
uuid = { version = "*", features = ["serde", "v4"] }
serde_json = "*"
url = "*"