[package]
name = "recording-rule-group-sets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
async-trait = "*"
cx-sdk = { path = "../../cx-sdk" }
http = "*"
prost = "0.12"
prost-wkt = "0.5"
prost-wkt-types = "0.5"
serde_json = "*"
time = "0.3.36"
tokio = { version = "*", features = ["full"] }
tonic = "*"
