[package]
name = "teams"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/coralogix/coralogix-management-sdk"
keywords = ["asynchronous", "coralogix", "log", "management", "sdk"]
categories = ["asynchronous", "log"]
authors = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
http = "*"
cx-sdk = { path = "../../cx-sdk" }
async-trait = "*"
tonic = "*"
anyhow = "*"
uuid = { version = "*", features = ["serde", "v4"] }
serde_json = "*"
time = "0.3.36"
prost = "0.12"
prost-wkt = "0.5"
prost-wkt-types = "0.5"
